# glyphs-generator

./: .gitignore  BlogPost.ipynb  Cargo.toml  Demo.ipynb  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: black.yml  build.yml  pytest.yml  python-app.yml  test.yml
docs/: README.md  index.html  parameters.js  script.js  style.css
docs/pkg/: glyphs_generator.d.ts  glyphs_generator.js  glyphs_generator_bg.wasm  glyphs_generator_bg.wasm.d.ts  package.json
examples/: hello.rs  input.json  parameters_4ap.json  strokes_11.json
glyphs_generator/: __init__.py  build.py  builder.py  data.py  generate.py  generator.py  glyph.py  intersect.py  rasterize.py
src/: coordinate.rs  generate.rs  generator.rs  glyph.rs  input.json  lib.rs  parameters.rs  rasterize.rs  result.rs  stroke.rs  tests.rs
tests/: conftest.py  test_generate.py  test_internal_repr.py  test_intersect.py  test_intersection.py  test_transforms.py
tools/: clean.cmd  clean.sh
ui/: index.html  script.js
