[tool.poetry]
name = "glyphs-generator"
version = "0.1.0"
description = ""
authors = ["v4nn4 <romflorentz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
black = "^24.3.0"
ruff = "^0.3.5"
pytest = "^8.1.1"
coverage = "^7.4.4"
matplotlib = "^3.8.4"

[tool.black]
skip-string-normalization = true
line-length = 120

[tool.ruff]
# Same as Black.
line-length = 120

[tool.ruff.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"